git-svn-id: https://svn.cebitec.uni-bielefeld.de/svn/mgx@2007 2f99df6c-41e9-6383-b5e2-de53e728a4e2