@@ -14,9 +14,11 @@ import de.cebitec.mgx.gui.groups.VisualizationGroup;
 import java.awt.Color;
 import java.awt.geom.Ellipse2D;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
+import java.util.Set;
 import javax.swing.JComponent;
 import org.jfree.chart.ChartFactory;
 import org.jfree.chart.ChartPanel;
@@ -24,11 +26,9 @@ import org.jfree.chart.JFreeChart;
 import org.jfree.chart.axis.NumberAxis;
 import org.jfree.chart.axis.TickUnitSource;
 import org.jfree.chart.axis.ValueAxis;
-import org.jfree.chart.labels.StandardXYToolTipGenerator;
 import org.jfree.chart.labels.XYToolTipGenerator;
 import org.jfree.chart.plot.PlotOrientation;
 import org.jfree.chart.plot.XYPlot;
-import org.jfree.chart.renderer.xy.XYDotRenderer;
 import org.jfree.chart.renderer.xy.XYLineAndShapeRenderer;
 import org.jfree.data.xy.XYDataItem;
 import org.jfree.data.xy.XYDataset;
@@ -75,22 +75,46 @@ public class MAPlot extends NumericalViewerI {
         Distribution first = relevant.get(0).getSecond();
         Distribution second = relevant.get(1).getSecond();
 
-        for (Entry<Attribute, Number> e : first.entrySet()) {
-            // extract attributes occuring in both datasets
-            if (second.keySet().contains(e.getKey())) {
-                double firstVal = e.getValue().doubleValue();
-                double secondVal = second.get(e.getKey()).doubleValue();
+        Set<Attribute> attrs = new HashSet<>();
+        attrs.addAll(first.keySet());
+        attrs.addAll(second.keySet());
 
-                double x = (Math.log(firstVal) + Math.log(secondVal)) / 2;
-                double y = Math.log(firstVal / secondVal);
-                XYDataItem item = new XYDataItem(x, y);
+        for (Attribute a : attrs) {
+            XYDataItem item = null;
+            double x, y;
+            double firstVal = 0, secondVal = 0;
+
+            if (first.keySet().contains(a) && second.keySet().contains(a)) {
+                // attribute occurs in both distributions
+                firstVal = first.get(a).doubleValue();
+                secondVal = second.get(a).doubleValue();
+                x = (log2(firstVal) + log2(secondVal)) / 2;
+                y = log2(firstVal / secondVal);
+                item = new XYDataItem(x, y);
+//            } else if (first.keySet().contains(a) && !second.keySet().contains(a)) {
+//                // attribute occurs in first distribution only
+//                firstVal = first.get(a).doubleValue();
+//                secondVal = 0;
+//                x = (log2(firstVal) + log2(secondVal)) / 2;
+//                y = log2(firstVal / secondVal);
+//                item = new XYDataItem(x, y);
+//            } else if (second.keySet().contains(a) && !first.keySet().contains(a)) {
+//                // attribute occurs in second distribution only
+//                firstVal = 0;
+//                secondVal = second.get(a).doubleValue();
+//                x = (log2(firstVal) + log2(secondVal)) / 2;
+//                y = log2(firstVal / secondVal);
+//                item = new XYDataItem(x, y);
+            }
+
+            if (item != null) {
                 series.add(item);
 
                 long numAssigned1 = Math.round(firstVal * first.getTotalClassifiedElements());
                 long numAssigned2 = Math.round(secondVal * second.getTotalClassifiedElements());
 
                 String toolTipText = new StringBuilder("<html>")
-                        .append(e.getKey().getValue())
+                        .append(a.getValue())
                         .append("<br><br>")
                         .append(relevant.get(0).getFirst().getName())
                         .append(": ").append(numAssigned1).append(" sequences").append("<br>")
@@ -102,11 +126,12 @@ public class MAPlot extends NumericalViewerI {
                 toolTips.put(item, toolTipText);
             }
         }
+
         dataset.addSeries(series);
 
-        String xAxisLabel = "log(" + relevant.get(0).getFirst().getName() + ") + "
-                + "log(" + relevant.get(1).getFirst().getName() + ") / 2";
-        String yAxisLabel = "log(" + relevant.get(0).getFirst().getName() + "/"
+        String xAxisLabel = "log2(" + relevant.get(0).getFirst().getName() + ") + "
+                + "log2(" + relevant.get(1).getFirst().getName() + ") / 2";
+        String yAxisLabel = "log2(" + relevant.get(0).getFirst().getName() + "/"
                 + relevant.get(1).getFirst().getName() + ")";
 
         chart = ChartFactory.createXYLineChart(getTitle(), xAxisLabel, yAxisLabel, dataset, PlotOrientation.VERTICAL, false, true, false);
@@ -172,5 +197,11 @@ public class MAPlot extends NumericalViewerI {
     @Override
     public ImageExporterI getImageExporter() {
         return JFreeChartUtil.getImageExporter(chart);
+    }
+
+    private final static double log2 = Math.log(2);
+
+    private double log2(double d) {
+        return Math.log(d) / log2;
     }
 }
